feat publish curated dataset versions
